# secded-rs

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Cargo.toml  README.md  example.c  secded.h  test.c
src/: bitvec.rs  bitwise.rs  ffi.rs  lib.rs  secded_128.rs  secded_64.rs  secded_dynamic.rs
