CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(secded)

OPTION(USE_DYN "Enable Dynamic SECDED (only useful to encode bigger than 120bits payloads)" OFF)
OPTION(NO_PANIC "Disables Panics" OFF)

IF(USE_DYN)
    ADD_COMPILE_DEFINITIONS(SECDED_FEATURES_DYN)
    IF(NO_PANIC)
        ADD_CUSTOM_TARGET(secded COMMAND cargo build --release --features "dyn ffi no-panics")
    ELSE()
        ADD_CUSTOM_TARGET(secded COMMAND cargo build --release --features "dyn ffi")
    ENDIF()
ELSEIF(NO_PANIC)
    ADD_CUSTOM_TARGET(secded COMMAND cargo build --release --features "ffi no-panics")
ELSE()
    ADD_CUSTOM_TARGET(secded COMMAND cargo build --release --features "ffi")
ENDIF()

ADD_EXECUTABLE(example example.c)
ADD_DEPENDENCIES(example secded)
TARGET_LINK_LIBRARIES(example PRIVATE ${CMAKE_CURRENT_LIST_DIR}/target/release/libsecded.a)
TARGET_LINK_LIBRARIES(example PUBLIC  pthread dl)
