[package]
name = "hamming"
version = "0.1.0"
authors = ["Pierre Avital <pierre.avital@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = {version = "1.3.2", default-features = false, features = ["i128"]}

[features]
ffi = []
default = ["ffi"]

[lib]
name = "secded"
crate-type = ["staticlib", "dylib"]
